--- a/skool/index.html
+++ b/skool/index.html
@@ -78,17 +78,17 @@ TH {
 <TR>
 <TD vAlign=top>
 <P><STRONG>Gebruiker:</STRONG>&nbsp;<span id="user">installuser</span> <BR><STRONG>Beleid:</STRONG>&nbsp;<span id="beleid">Mild Beleid</span> </P>
-<P><STRONG>Categorieën:</STRONG> <BR><span id="category">N/A</span> </P></TD>
+<P><STRONG>CategorieÃ«n:</STRONG> <BR><span id="category">N/A</span> </P></TD>
 <TD align=middle><a onclick='document.getElementById("user").innerHTML = prompt("Gebruiker", "");
 document.getElementById("beleid").innerHTML = prompt("Beleid", "");
-document.getElementById("category").innerHTML = prompt("Categorieën (\ n voor enter)", "").replace("\n","<div>");
+document.getElementById("category").innerHTML = prompt("CategorieÃ«n (backslash+n voor enter)", "").replace("\n","<div>");
 document.getElementById("url").innerHTML = prompt("Geblokkeerde URL", "");
 document.getElementById("reason").innerHTML = prompt("Reden", "");'><IMG alt="toegang geweigerd agent" src="access_denied.png" width=180 height=158></a> </TD></TR>
 <TR>
 <TD colSpan=2>
 <P>Toegang tot de pagina: <BR><SPAN style="FONT-SIZE: 9px"><span id="url">https://youtube.com/watch?v=y6120QOlsfU</span></SPAN> <BR>...werd geweigerd om de volgende reden: <BR><span id="reason">Geblokkeerde website: youtube.com/watch</span> </P>
 <P>U ziet deze melding omdat de pagina die u probeerde te benaderen, materiaal lijkt te bevatten dat ongeschikt is om te bekijken, of gemarkeerd is als ongeschikt om te bekijken. </P>
-<P>Indien U hierover vragen heeft kunt U contact opnemen met de ICT-Coördinator. </P></TD></TR></TBODY></TABLE></TD>
+<P>Indien U hierover vragen heeft kunt U contact opnemen met de ICT-CoÃ¶rdinator. </P></TD></TR></TBODY></TABLE></TD>
 <TD class=mr></TD>
 <TR>
 <TD class=bl><IMG src="box_07.png" width=25 height=25></TD>
