--- a/index.html
+++ b/index.html
@@ -1,110 +1,11 @@
 <html>
 <head>
-  <title>MtHub</title>
-  <meta name="description" content="Hubba hubba">
+  <title>MtH</title>
+  <meta name="description" content="MtH website">
   <meta name="author" content="MtH">
-  <meta game="20xx" content="perfect pivoting is only movement option">
-  <meta knight="brawl tiers" content="who needs tiers when you have meta knight">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div id="top">
-    <div class="jigle">
-      <a href="http://niceme.me/"><img src="img/jiglepufe.png" alt="Jiglepufe" align="middle"></a>
-    </div>
-    <div class="social">
-      <a href="http://www.smashladder.com/player/50548/mth/"><img src="img/anther.png" alt="Anther's Ladder" width="20" height="20" hspace="5"></a>
-      <a href="http://myanimelist.net/animelist/pikachu000000000"><img src="img/mal.png" alt="MyAnimeList" width="20" height="20"></a>
-      <a href="http://soundcloud.com/pikachu000000000"><img src="img/soundcloud.png" alt="SoundCloud" width="20" height="20" hspace="5"></a>
-      <a href="http://youtube.com/user/pikachu000000000"><img src="img/youtube.png" alt="YouTube" width="20" height="20"></a>
-      <a href="http://twitter.com/pikachu000000000"><img src="img/twitter.png" alt="Twitter" width="20" height="20" hspace="5"></a>
-      <a href="http://soundcloud.com/anusfarts"><img src="img/soundcloud.png" alt="SoundClown" width="20" height="20"></a>
-    </div>
-  </div>
-  <div id="highlights">
-    <div class="royco">
-      <img src="img/royco.png"width="550" height="550" alt="Royco Wakka Soup">
-    </div>
-    <div class="noice"></div>
-  </div>
-  <div id="sel">
-    <span class="lijn"></span>
-    <img class="notabtn" src="img/btnhome.png" alt="HOME">
-    <span class="lijn"></span>
-    <a href="#mains"><img class="navbtn" src="img/btnmains.png" alt="MAINS"></a>
-    <span class="lijn"></span>
-    <a href="noice.html"><img class="navbtn" src="img/btnnoice.png" alt="NOICE"></a>
-    <span class="lijn"></span>
-    <a href="http://morl.spreadshirt.nl/"><img class="navbtn" src="img/btnshirts.png" alt="SHIRTS"></a>
-    <span class="lijn"></span>
-  </div>
-  <a href="http://25.media.tumblr.com/fccd71ddc755aaf15380548f560e6edf/tumblr_mk2ulcEDVE1rcj8eco1_500.gif" alt="CHITANDA APPROACHING" width="900"><span class="challenge"></span></a>
-  <br>
-  <a href="mailto:sora-sakurai@nintendo.co.jp" alt="Nana & Popo; Missing Since 2014" width="412"><span class="ics"></span></a>
-  <br><br>
-  <!--Mains section; format characters like this:
-  <a class="char" href="#" alt="---">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/---.png" width="225" height="225">
-  </a>
-  replace --- with the character's name
-  # can also link to a webpage
-  -->
-  <div id="mains">
-  <img src="img/mainstext.png" alt="Mains"><br><br>
-  <a class="char" href="https://www.youtube.com/playlist?list=PLqwDpRQTJXoUMQOt417I04yTlRi7f6ipl" alt="Jigglypuff">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/puff.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Zelda">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/zelda.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Pikachu">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/pika.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Lucas">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/lucas.png" width="225" height="225">
-  </a>
-  <br><br>
-  <img src="img/secontext.png" alt="Secondaries" id="secondaries"><br><br>
-  <a class="char" href="#" alt="Kirby">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/kirby.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Marth">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/marth.png" width="225" height="225">
-  </a>
-  <a class="char" href="https://youtu.be/x4oyop7eqyo" alt="Sheik">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/sheik.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Captain Falcon">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/falcon.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Link">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/link.png" width="225" height="225">
-  </a>
-  <a class="char" href="https://youtu.be/Cs6tfOLJe5Y" alt="Mr. Game & Watch">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/gamewatch.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Roy">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/roy.png" width="225" height="225">
-  </a>
-  <a class="char" href="#" alt="Pichu">
-    <img src="img/Chars/hover.png" width="225" height="225" class="hover">
-    <img src="img/Chars/pichusoon.png" width="225" height="225">
-  </a>
-  </div>
-  <div id="bottom">
-  <b>Site made by RWS|MtH_[HAGG].<br>No infringement of copyright is intended in this website.</b><br><br>This is not an official Nintendo website and should therefore not be viewed as such. For official copyright information, see the <a href="http://www.smashbros.com/">the offical website for <b>Super Smash Bros. for Wii U and Nintendo 3DS</b></a>.<br>The NOICE album and related tracks are not meant as an insult to any individual or group of individuals. All tracks referenced in the album are owned by their respective owners.
-  </div>
+  <i><b>Nothing to see here.</i></b>
 </body>
 </html>
