--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ permalink: /404.html
 ---
 <html>
 <body>
-<h1>404 page not found</h1>
+<h1>404; Page not found</h1>
 <div>
-Go back and try again!
+Ya friccin' moron.
 </body>
