--- a/banker.html
+++ b/banker.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body style="background:url(bankermario.gif);">
-  <audio autoplay="">
+  <audio autoplay loop>
     <source src="gravity.mp3" type="audio/mpeg">
   </audio>
 
