--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="overflow:hidden;object-fit:cover;">
   <div id="fg" style="width:100%;height:100%;z-index:-1;background:url(img/bgo.gif);position:absolute;"></div>
-  <iframe src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&loop=1&rel=0&showinfo=0&autohide=1&wmode=transparent&hd=1&playlist=sO_jMHRAacY" frameborder="0" style="position:fixed;z-index:-99;width:100%;height:100%;left:0;top:0;pointer-events:none;"></iframe>
+  <iframe src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&loop=1&rel=0&showinfo=0&autohide=1&wmode=transparent&hd=1&playlist=sO_jMHRAacY" frameborder="0" style="position:fixed;z-index:-99;width:125%;height:125%;pointer-events:none;"></iframe>
   <i><b>Nothing to see here.</i></b>
 </body>
 </html>
