--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>MtH</title>
   <meta name="description" content="MtH website">
   <meta name="author" content="MtH">
+  <meta name="yandex-verification" content="c915c3c1453c8f55" />
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body style="overflow:hidden;object-fit:cover;">
