--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body style="overflow:hidden;object-fit:cover;">
   <div id="fg" style="width:100%;height:100%;z-index:-1;background:url(img/bgo.gif);position:absolute;"></div>
-  <iframe src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&loop=1&rel=0&showinfo=0&autohide=1&wmode=transparent&hd=1&playlist=sO_jMHRAacY" frameborder="0" style="position:fixed;z-index:-99;width:125%;height:125%;pointer-events:none;"></iframe>
-  <i><b>Nothing to see here.</i></b>
+  <iframe frameborder="0" allow="autoplay; encrypted-media;" src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&showinfo=0&modestbranding=1&wmode=transparent&mute=1" style="position:fixed;z-index:-99;width:125%;height:125%;pointer-events:none;"></iframe>  <table>
+  <tr style="font-size:52px;"><td><i><b>Proper website coming soon.</i></b></td>
+  <td> --- </td><td>Links:</td></tr>
+  <div>
+  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="https://twitter.com/pikachu00000000">Twitter (music)</a><br></td>
+  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="https://twitter.com/MtH13208">Twitter (personal)</a><br></td>
+  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="https://youtube.com/user/pikachu000000000">YouTube</a><br></td>
+  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="mailto:mth@mth.moe">Contact (email)</a></td>
+  </div>
 </body>
 </html>
+
