--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="overflow:hidden;object-fit:cover;">
   <div id="fg" style="width:100%;height:100%;z-index:-1;background:url(img/bgo.gif);position:absolute;"></div>
-  <iframe frameborder="0" allow="autoplay; encrypted-media;" src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&showinfo=0&modestbranding=1&wmode=transparent&mute=1" style="position:fixed;z-index:-99;width:125%;height:125%;pointer-events:none;"></iframe>  <table>
+  <iframe frameborder="0" allow="autoplay; encrypted-media;" src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&showinfo=0&modestbranding=1&wmode=transparent&mute=1&rel=0&playlist=sO_jMHRAacY" style="position:fixed;z-index:-99;width:125%;height:125%;pointer-events:none;"></iframe>  <table>
   <tr style="font-size:52px;"><td><i><b>Proper website coming soon.</i></b></td>
   <td> --- </td><td>Links:</td></tr>
   <div>
