--- a/index.html
+++ b/index.html
@@ -1,21 +1,96 @@
 <html>
 <head>
-  <title>MtH</title>
-  <meta name="description" content="MtH website">
-  <meta name="author" content="MtH">
-  <link href="style.css" rel="stylesheet" type="text/css">
+	<title>MtH - Home</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	
+	<!-- favicon stuff -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f66889">
+	<meta name="msapplication-TileColor" content="#f66889">
+	<meta name="theme-color" content="#f66889">
+	
+	<!-- search engines -->
+	<meta name="title" content="MtH">
+	<meta name="description" content="Musician & designer, manager of SiIvaGunner">
+	<meta name="keywords" content="music, video games, siivagunner, giivasunner, gilvasunner, silvagunner, high quality rips, mashup, remix, arrangement, anime, girls, lesbian">
+	<meta name="robots" content="index, follow">
+	<meta name="language" content="English">
+	<meta name="author" content="MtH">
+	
+	<!-- social embeds -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://mth.moe/">
+	<meta property="og:title" content="MtH">
+	<meta property="og:description" content="Musician & designer, manager of SiIvaGunner">
+	<meta property="og:image" content="http://mth.moe/mthbr-card.png">
+	
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:url" content="http://mth.moe/">
+	<meta name="twitter:title" content="MtH">
+	<meta name="twitter:description" content="Musician & designer, manager of SiIvaGunner">
+	<meta name="twitter:image" content="http://mth.moe/mthbr-card.png">
+	<meta name="twitter:creator" content="@pikachu00000000">
+	
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<style> 
+		body {
+			overflow:hidden;
+			background:url(brandbg.jpg) no-repeat center center fixed;
+			background-size:cover;
+			position:absolute;
+			margin:0;
+			width:100%;
+			height:100%;
+			font-family: 'Noto Sans JP', sans-serif;
+		}
+		#top {
+			width:720px;
+			height:100%;
+			background-color:white;
+			color:black;
+			margin:auto;
+			box-shadow: 0px 0px 30px 10px #b86862;
+		}
+		#navmenu {
+			margin-bottom:10px;
+		}
+		#content {
+			padding: 0px 50px;
+			margin: 20px 0px;
+		}
+		#footer {
+			font-family: serif;
+		}
+		.fa {
+			font-family:'FontAwesome';
+		}
+	</style>
 </head>
-<body style="overflow:hidden;object-fit:cover;">
-  <div id="fg" style="width:100%;height:100%;z-index:-1;background:url(img/bgo.gif);position:absolute;"></div>
-  <iframe frameborder="0" allow="autoplay; encrypted-media;" src="https://www.youtube.com/embed/sO_jMHRAacY?autoplay=1&controls=0&showinfo=0&modestbranding=1&wmode=transparent&mute=1&rel=0&playlist=sO_jMHRAacY" style="position:fixed;z-index:-99;width:125%;height:125%;pointer-events:none;"></iframe>  <table>
-  <tr style="font-size:52px;"><td><i><b>Proper website coming soon.</i></b></td>
-  <td> --- </td><td>Links:</td></tr>
-  <div>
-  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="https://twitter.com/pikachu00000000">Twitter (music)</a><br></td>
-  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="https://twitter.com/MtH13208">Twitter (personal)</a><br></td>
-  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="https://youtube.com/user/pikachu000000000">YouTube</a><br></td>
-  <tr style="font-size:52px;text-align: center;"><td colspan="3"><a href="mailto:mth@mth.moe">Contact (email)</a></td>
-  </div>
+<body link="HotPink" vlink="HotPink">
+	<div id="top" align="center">
+		<a href="http://mth.moe" alt="MtH"><img src="mthlogo.png"></img></a>
+		<!-- div id="navmenu">
+		</div -->
+		<div id="content" align="left">
+			<p>There is currently no content on this website.<br>
+			You can find my content in the following places:</p>
+			<h2><a href="http://youtube.com/user/pikachu000000000"><i class="fa fa-youtube"></i> YouTube</a></h2>
+			<h2><a href="http://twitter.com/pikachu00000000"><i class="fa fa-twitter"></i> Twitter (music)</a></h2>
+			<h2><a href="http://twitter.com/MtH13208"><i class="fa fa-twitter"></i> Twitter (personal)</a></h2>
+			<h2><a href="http://twitch.tv/EmmaMtH"><i class="fa fa-twitch"></i> Twitch</a></h2>
+			<h2><a href="https://open.spotify.com/artist/5n2hr1l2gc21qnbfKMqJQA"><i class="fa fa-spotify"></i> Spotify artist profile</a></h2>
+			<h2><a href="https://mth-op.booth.pm/"><i class="fa fa-music"></i> booth.pm</a></h2>
+			<h2><a href="mailto:mth@mth.moe"><i class="fa fa-envelope"></i> Contact (e-mail)</a></h2>
+			
+		</div>
+		<div id="footer" align="center">
+		© MtH 2020
+		</div>
+	</div>
 </body>
 </html>
 
