--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style> 
 		body {
-			overflow:hidden;
 			background:url(brandbg.jpg) no-repeat center center fixed;
 			background-size:cover;
 			position:absolute;
 			margin:0;
 			width:100%;
-			height:100%;
+			min-height:100%;
 			font-family: 'Noto Sans JP', sans-serif;
 		}
 		#top {
