--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 			<p>There is currently no content on this website.<br>
 			You can find my content in the following places:</p>
 			<h2><a href="http://youtube.com/user/pikachu000000000"><i class="fa fa-youtube"></i> YouTube</a></h2>
-			<h2><a href="http://twitter.com/pikachu00000000"><i class="fa fa-twitter"></i> Twitter (music)</a></h2>
-			<h2><a href="http://twitter.com/MtH13208"><i class="fa fa-twitter"></i> Twitter (personal)</a></h2>
+			<h2><a href="http://twitter.com/MtH13208"><i class="fa fa-twitter"></i> Twitter</a></h2>
 			<h2><a href="https://www.patreon.com/mth"><i class="fa fa-group"></i> Patreon</a></h2>
+			<h2><a href="http://pikachu000000000.newgrounds.com/">🆖 Newgrounds</a></h2>
 			<h2><a href="http://twitch.tv/EmmaMtH"><i class="fa fa-twitch"></i> Twitch</a></h2>
 			<h2><a href="https://open.spotify.com/artist/5n2hr1l2gc21qnbfKMqJQA"><i class="fa fa-spotify"></i> Spotify artist profile</a></h2>
 			<h2><a href="https://mth-op.booth.pm/"><i class="fa fa-music"></i> booth.pm</a></h2>
