--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<meta name="twitter:title" content="MtH">
 	<meta name="twitter:description" content="Musician & designer, manager of SiIvaGunner">
 	<meta name="twitter:image" content="http://mth.moe/mthbr-card.png">
-	<meta name="twitter:creator" content="@pikachu00000000">
+	<meta name="twitter:creator" content="@MtH">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
