--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<meta name="twitter:title" content="MtH">
 	<meta name="twitter:description" content="Musician & designer, manager of SiIvaGunner">
 	<meta name="twitter:image" content="http://mth.moe/mthbr-card.png">
-	<meta name="twitter:creator" content="@MtH">
+	<meta name="twitter:creator" content="@emmnyaa">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -78,7 +78,7 @@
 			<p>There is currently no content on this website.<br>
 			You can find my content in the following places:</p>
 			<h2><a href="http://youtube.com/user/pikachu000000000"><i class="fa fa-youtube"></i> YouTube</a></h2>
-			<h2><a href="http://twitter.com/MtH13208"><i class="fa fa-twitter"></i> Twitter</a></h2>
+			<h2><a href="http://twitter.com/emmnyaa"><i class="fa fa-twitter"></i> Twitter</a></h2>
 			<h2><a href="https://www.patreon.com/mth"><i class="fa fa-group"></i> Patreon</a></h2>
 			<h2><a href="http://pikachu000000000.newgrounds.com/">🆖 Newgrounds</a></h2>
 			<h2><a href="http://twitch.tv/EmmaMtH"><i class="fa fa-twitch"></i> Twitch</a></h2>
@@ -88,7 +88,7 @@
 			
 		</div>
 		<div id="footer" align="center">
-		© MtH 2020
+		© MtH 2021
 		</div>
 	</div>
 </body>
