--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			You can find my content in the following places:</p>
 			<h2><a href="http://youtube.com/user/pikachu000000000"><i class="fa fa-youtube"></i> YouTube</a></h2>
 			<h2><a href="https://www.patreon.com/mth"><i class="fa fa-group"></i> Patreon</a></h2>
-			<h2><a href="https://mth-emma.tumblr.com/"><i class="fa fa-tumblr"></i> Tumblr</a></h2>
+			<h2><a href="https://digi-log-conversation.tumblr.com/"><i class="fa fa-tumblr"></i> Tumblr</a></h2>
 			<h2><a href="http://pikachu000000000.newgrounds.com/">🆖 Newgrounds</a></h2>
 			<h2><a href="http://twitter.com/emmnyaa"><i class="fa fa-twitter"></i> Twitter</a></h2>
 			<h2><a href="http://twitch.tv/EmmaMtH"><i class="fa fa-twitch"></i> Twitch</a></h2>
