--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 			You can find my content in the following places:</p>
 			<h2><a href="http://youtube.com/user/pikachu000000000"><i class="fa fa-youtube"></i> YouTube</a></h2>
 			<h2><a href="https://www.patreon.com/mth"><i class="fa fa-group"></i> Patreon</a></h2>
+			<h2><a href="https://soundcloud.com/emmnya"><i class="fa fa-soundcloud"></i> SoundCloud</a> (new)</h2>
 			<h2><a href="https://digi-log-conversation.tumblr.com/"><i class="fa fa-tumblr"></i> Tumblr</a></h2>
 			<h2><a href="http://pikachu000000000.newgrounds.com/">🆖 Newgrounds</a></h2>
 			<h2><a href="http://twitter.com/emmnyaa"><i class="fa fa-twitter"></i> Twitter</a></h2>
@@ -88,7 +89,7 @@
 			<h2><a href="mailto:mth@mth.moe"><i class="fa fa-envelope"></i> Contact (e-mail)</a></h2>
 		</div>
 		<div id="footer" align="center">
-		© MtH 2023
+		© MtH 2024
 		</div>
 	</div>
 </body>
