--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 			You can find my content in the following places:</p>
 			<h2><a href="http://youtube.com/user/pikachu000000000"><i class="fa fa-youtube"></i> YouTube</a></h2>
 			<h2><a href="https://www.patreon.com/mth"><i class="fa fa-group"></i> Patreon</a></h2>
-			<h2><a href="https://soundcloud.com/emmnya"><i class="fa fa-soundcloud"></i> SoundCloud</a> (new)</h2>
+			<h2><a href="https://soundcloud.com/emmnya"><i class="fa fa-soundcloud"></i> SoundCloud</a></h2>
+			<h2><a href="https://emmamth.bandcamp.com/"><i class="fa fa-bandcamp"></i> Bandcamp</a> (new)</h2>
 			<h2><a href="https://digi-log-conversation.tumblr.com/"><i class="fa fa-tumblr"></i> Tumblr</a></h2>
 			<h2><a href="http://pikachu000000000.newgrounds.com/">🆖 Newgrounds</a></h2>
 			<h2><a href="http://twitter.com/emmnyaa"><i class="fa fa-twitter"></i> Twitter</a></h2>
 			<h2><a href="http://twitch.tv/EmmaMtH"><i class="fa fa-twitch"></i> Twitch</a></h2>
-			<h2><a href="https://open.spotify.com/artist/5n2hr1l2gc21qnbfKMqJQA"><i class="fa fa-spotify"></i> Spotify artist profile</a></h2>
 			<h2><a href="https://mth-op.booth.pm/"><i class="fa fa-music"></i> booth.pm</a></h2>
 			<h2><a href="mailto:mth@mth.moe"><i class="fa fa-envelope"></i> Contact (e-mail)</a></h2>
 		</div>
